--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 lazy_static = "1.5.0"
 proc-macro2 = "1.0.92"
 quote = "1.0.38"
+rand = "0.9.2"
 serde = "1.0.217"
 serde_json = "1.0.136"
 syn = "2.0.95"
